--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body {
     max-width: 1200px;
     height: 100vh;
     margin: 0 auto;
+    margin-bottom: 58px;
 }
 
 .container {
@@ -88,6 +89,110 @@ body {
     color: #fff;
     font-size: 12px;
     text-transform: uppercase;
+    border: none;
+   
 }
+
+.main {
+    max-width: 1200px;
+    
+    margin: 0 auto;
+}
+
+.galary {
+    width: 100%;
+    height: 100vh;
+    margin-bottom: 50px;
+}
+
+.mtitle {
+    text-align: center;
+    font-size: 15px;
+    text-transform: uppercase;
+    font-family: inherit;
+    font-weight: 400;
+    color: #000;
+    line-height: 19.5px;
+    margin-bottom: 39px;
+}
+
+.label {
+    margin-right: 83px;
+}
+
+.label__skimm {
+    margin-right: 0;
+}
+
+
+
+.galary__label {
+    margin-bottom: 250px;
+    margin-left: 250px;
+    margin-right: 250px;
+}
+
+.about-us {
+    display: flex;
+    justify-content: start;
+    gap: 50px;
+    margin-bottom: 47px;
+}
+
+.galary__text {
+    display: flex;
+    flex-direction: column;
+    padding-left: px;
+    padding-top: 57px;
+    width: 350px;
+    margin-right: 50px;
+}
+
+.doc {
+    font-weight: 400;
+    font-family: inherit;
+    font-size: 18px;
+    text-transform: uppercase;
+    line-height: 27px;
+    margin-bottom: 70px;
+    letter-spacing: 0.99px;
+    color: #000;
+}
+
+.name {
+    font-weight: 400;
+    font-family: inherit;
+    color: #000;
+    font-size: 54px;
+    line-height: 64.8px;
+    margin-bottom: 91px;
+}
+
+.galary__description {
+  font-size: 18px;
+  color: #000;
+  font-family: inherit;
+  font-weight: 400;
+  line-height: 27px;
+  margin-bottom: 47px;
+}
+
+.galary__btn {
+    width: 147px;
+    height: 47px;
+    color: #fff;
+    background-color: #000;
+    border: none;
+    font-size: 13px;
+    text-transform: uppercase;
+}
+
+.statistic {
+    width: 100%;
+    height: 100vh;
+}
+
+
+
 
 
