--- a/css/style.css
+++ b/css/style.css
@@ -188,9 +188,119 @@ body {
 }
 
 .statistic {
-    width: 100%;
-    height: 100vh;
+    max-width: 1200px;;
+    height: 
 }
+
+.main__foto {
+    margin: 0 auto 260px; 
+    width: 1000px;   
+}
+
+.list {
+    text-align: center;
+    font-size: 30px;
+    font-family: inherit;
+    font-weight: 400;
+    line-height: 39px;
+    letter-spacing: 0.6;
+    margin-bottom: 19px;
+    color: #000;
+}
+
+.mauntain {
+    width: 100%;
+}
+
+.bio {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 15px;
+    color: #000;
+    line-height: 22.5px;
+    margin-bottom: 110px;
+}
+
+.div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 124px;
+    margin-bottom: 110px;
+}
+
+.st__info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.st__name {
+    font-size: 54px;
+    color: #000;
+    letter-spacing: 2.97px;
+    text-transform: uppercase;
+    margin-bottom: 4px;
+}
+
+.st__mean {
+    font-size: 17px;
+    color: #000;
+    letter-spacing: 0.36;
+}
+
+.st__btn {
+    text-align: center;
+    width: 356px;
+    height: 47px;
+    background-color: #000;
+    color: #fff;
+    margin-bottom: 210px;
+    margin-left: 422px;
+}
+
+.answer {
+    max-width: 1200px;
+    display: flex;
+    gap: 69px;
+}
+
+.answer__text {
+   
+}
+
+.texta {
+    margin-left: 100px;
+    font-size: 15px;
+    margin-bottom: 20px;
+    margin-top: 49px;
+    text-transform: uppercase;
+    line-height: 22.5px;
+}
+
+.textb {
+    font-size: 54px;
+    font-weight: 400;
+    line-height: 64px;
+    margin-bottom: 87px;
+    margin-left: 100px;
+}
+
+.textd {
+    margin-left: 200px;
+    font-size: 24px;
+    line-height: 31.2px;
+    margin-bottom: 26px;
+    color: #000;
+}
+
+.texti {
+    margin-left: 200px;
+    font-size: 17px;
+    line-height: 27px;
+    letter-spacing: 0.36px;
+}
+
 
 
 
